feat: copletata le hero section

--- a/index.html
+++ b/index.html
@@ -31,13 +31,23 @@
                 </div>
             </div>
 
+
+
     </header>
 
 
     <main>
-
         <section class="hero-section">
-            <div class="hero-item"></div>
+            <div class="hero-item">
+                <h1>Il tuo posto per parlare</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Tenetur in nisi aut, reiciendis eaque
+                    ducimus ipsum cumque quod consectetur vitae. <br> repellendus laudantium rem recusandae nesciunt animi
+                    similique totam eos error.</p>
+                </div>
+                <div class="buttons">
+                    <a class="button-wite">🠗Scarica per Mac</a>
+                    <a class="button-black">Apri Discord nel tuo browser</a>
+                </div>
         </section>
 
         <section class="container-wite">
