feat: finita sezione delle immagine e testo

--- a/index.html
+++ b/index.html
@@ -31,45 +31,77 @@
                 </div>
             </div>
 
-
-
     </header>
 
 
     <main>
-        <section class="hero-section">
-            <div class="hero-item">
+
+        <section class="hero">
+            <div class="hero-content">
                 <h1>Il tuo posto per parlare</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Tenetur in nisi aut, reiciendis eaque
-                    ducimus ipsum cumque quod consectetur vitae. <br> repellendus laudantium rem recusandae nesciunt animi
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Tenetur in nisi aut, reiciendis eaque
+                    ducimus ipsum cumque quod consectetur vitae.<br> repellendus laudantium rem recusandae nesciunt
+                    animi
                     similique totam eos error.</p>
+            </div>
+            <div class="buttons">
+                <a class="button-wite">🠗Scarica per Mac</a>
+                <a class="button-black">Apri Discord nel tuo browser</a>
+            </div>
+        </section>
+
+        <section class="container-pagina container">
+            <div class="immagine-testo">
+                <img class="immagine" src="./img/item1.svg" alt="frog">
+                <div class="testo">
+                    <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae aut cupiditate, voluptates et
+                        cumque
+                        maiores, sequi similique iusto dolor velit ea quo accusamus nisi maxime magnam laborum
+                        aspernatur
+                        saepe eveniet!
+                    </p>
                 </div>
-                <div class="buttons">
-                    <a class="button-wite">🠗Scarica per Mac</a>
-                    <a class="button-black">Apri Discord nel tuo browser</a>
+        </section>
+
+        <div class="grey">
+            <section class="container-pagina container">
+                <div class="immagine-testo">
+                    <div class="reverse">
+                        <img class="immagine" src="./img/item1.svg" alt="frog">
+                        <div class="testo">
+                            <h1>Dove trovarsi è facile</h1>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae aut cupiditate, voluptates et
+                                cumque
+                                maiores, sequi similique iusto dolor velit ea quo accusamus nisi maxime magnam laborum
+                                aspernatur
+                                saepe eveniet!
+                            </p>
+                        </div>
+                    </div>
+            </section>
+        </div>
+
+        <section class="container-pagina container">
+            <div class="immagine-testo">
+                <img class="immagine" src="./img/item1.svg" alt="frog">
+                <div class="testo">
+                    <h1>Da pochi a un fandom</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae aut cupiditate, voluptates et
+                        cumque
+                        maiores, sequi similique iusto dolor velit ea quo accusamus nisi maxime magnam laborum
+                        aspernatur
+                        saepe eveniet!
+                    </p>
                 </div>
         </section>
 
-        <section class="container-wite">
-            <div class="spazio-box">
-                <div class="blue-item"></div>
-                <div class="pink-item"></div>
-            </div>
-        </section>
 
-        <section class="container-gray">
-            <div class="spazio-box">
-                <div class="blue-item"></div>
-                <div class="pink-item"></div>
-            </div>
-        </section>
 
-        <section class="container-wite">
-            <div class="spazio-box">
-                <div class="blue-item"></div>
-                <div class="pink-item"></div>
-            </div>
-        </section>
+
+
+
+
 
         <section class="container-green-cube">
             <div class="spazio-gree-box">
