--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Discord</title>
 
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -38,7 +38,7 @@
 
         <section class="hero">
             <div class="hero-content">
-                <h1>Il tuo posto per parlare</h1>
+                <h1 class="h1">Il tuo posto per parlare</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Tenetur in nisi aut, reiciendis eaque
                     ducimus ipsum cumque quod consectetur vitae.<br> repellendus laudantium rem recusandae nesciunt
                     animi
@@ -64,14 +64,25 @@
                 </div>
         </section>
 
+
+        <div class="wave">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#D3D3D3" fill-opacity="1"
+                    d="M0,160L60,181.3C120,203,240,245,360,261.3C480,277,600,267,720,240C840,213,960,171,1080,160C1200,149,1320,171,1380,181.3L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+                </path>
+            </svg>
+        </div>
+
         <div class="grey">
+
             <section class="container-pagina container">
                 <div class="immagine-testo">
                     <div class="reverse">
                         <img class="immagine" src="./img/item1.svg" alt="frog">
                         <div class="testo">
                             <h1>Dove trovarsi è facile</h1>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae aut cupiditate, voluptates et
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae aut cupiditate, voluptates
+                                et
                                 cumque
                                 maiores, sequi similique iusto dolor velit ea quo accusamus nisi maxime magnam laborum
                                 aspernatur
@@ -81,6 +92,13 @@
                     </div>
             </section>
         </div>
+
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#D3D3D3" fill-opacity="1"
+                d="M0,160L60,181.3C120,203,240,245,360,261.3C480,277,600,267,720,240C840,213,960,171,1080,160C1200,149,1320,171,1380,181.3L1440,192L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+            </path>
+        </svg>
+
 
         <section class="container-pagina container">
             <div class="immagine-testo">
@@ -96,18 +114,31 @@
                 </div>
         </section>
 
+        <div class="wave">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#D3D3D3" fill-opacity="1"
+                    d="M0,160L60,181.3C120,203,240,245,360,261.3C480,277,600,267,720,240C840,213,960,171,1080,160C1200,149,1320,171,1380,181.3L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+                </path>
+            </svg>
+        </div>
 
+        <div class="grey">
 
+            <section class="container-pagina">
+                <div class="">
+                    <h1>Tecnologia affidabile per tenersi in contatto</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus cum nam, mollitia doloribus
+                        praesentium molestiae accusamus necessitatibus eos minus eius quibusdam velit modi a ducimus
+                        dolore
+                        quidem saepe culpa consequatur.
+                    </p>
+                </div>
+                <div class="">
+                    <img src="./img/item4-big.svg" alt="just-chilling image">
+                </div>
+            </section>
 
-
-
-
-
-        <section class="container-green-cube">
-            <div class="spazio-gree-box">
-                <div class="green-cube-item"></div>
-            </div>
-        </section>
+        </div>
 
     </main>
 
