feat: finito il main

--- a/index.html
+++ b/index.html
@@ -133,14 +133,41 @@
                         quidem saepe culpa consequatur.
                     </p>
                 </div>
-                <div class="">
+
+                <div>
                     <img src="./img/item4-big.svg" alt="just-chilling image">
                 </div>
+
+                <div class="container-star">
+                <div>
+                            <h2 class="star">Pronto a iniziare la tua avventura?</h2>
+                    </div>
+                </div>
+
+                <div class="container-scarica">
+                    <a class="bottone Scarica">🠗Scarica per Mac</a>
+                </div>
+
             </section>
 
         </div>
 
     </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <footer>
         <section class="container-rectangle">
