fix: fotto alcune modifiche e aggiunto un po' footer ma sono funo e non ce la faccio più

--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
                 </div>
                 <div>
                     <ol>
-                        <li class="li-alta">Scarica</li>
-                        <li class="li-alta">Perché Discord</li>
-                        <li class="li-alta">Nitro</li>
-                        <li class="li-alta">Sicurezza</li>
-                        <li class="li-alta">Assistenza</li>
+                        <li class="li-alta"><a></a>Scarica</li>
+                        <li class="li-alta"><a></a>Perché Discord</li>
+                        <li class="li-alta"><a></a>Nitro</li>
+                        <li class="li-alta"><a></a>Sicurezza</li>
+                        <li class="li-alta"><a></a>Assistenza</li>
                     </ol>
                 </div>
                 <div class="accedi">
                     <a>Accedi</a>
                 </div>
             </div>
+        </div>
 
     </header>
 
@@ -62,6 +63,7 @@
                         saepe eveniet!
                     </p>
                 </div>
+            </div>
         </section>
 
 
@@ -90,6 +92,7 @@
                             </p>
                         </div>
                     </div>
+                </div>
             </section>
         </div>
 
@@ -112,6 +115,7 @@
                         saepe eveniet!
                     </p>
                 </div>
+            </div>
         </section>
 
         <div class="wave">
@@ -139,13 +143,13 @@
                 </div>
 
                 <div class="container-star">
-                <div>
-                            <h2 class="star">Pronto a iniziare la tua avventura?</h2>
+                    <div>
+                        <h2 class="star">Pronto a iniziare la tua avventura?</h2>
                     </div>
                 </div>
 
                 <div class="container-scarica">
-                    <a class="bottone Scarica">🠗Scarica per Mac</a>
+                    <a class="bottone-scarica">🠗Scarica per Mac</a>
                 </div>
 
             </section>
@@ -156,45 +160,45 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
     <footer>
-        <section class="container-rectangle">
-            <div class="spazio-box">
-                <div class="red-item"></div>
-                <div class="green-item"></div>
-                <div class="green-item"></div>
-                <div class="green-item"></div>
-                <div class="green-item"></div>
-            </div>
-        </section>
+        <div class="container-pagina finale">
+            <section class="ultima-sezione">
+                <div class="content-footer">
+                    <a class="color-blue">Il tuo posto per parlare</a>
+                </div>
+                <div>
+                    <img class="bandiera" src="./img/ita.png" alt="bandiera italiana">
+                    <button class="liste-footer italia">Italiano˅</button>
+                </div>
+            </section>
 
+
+
+
+            <div class="container-lista">
+                <ol>
+                    <li class="li-bassa"><a></a>Scarica</li>
+                    <li class="li-bassa"><a></a>Perché Discord</li>
+                    <li class="li-bassa"><a></a>Nitro</li>
+                    <li class="li-bassa"><a></a>Sicurezza</li>
+                    <li class="li-bassa"><a></a>Assistenza</li>
+                </ol>
+
+            </div>
+
+
+
+            </nav>
+
+        </div>
         <hr>
-        </div>
 
-        <section class="last-container">
-            <div class="spazio">
-                <div class="last-item">logo</div>
-                <div class="last-item">bottone</div>
-                <!--  -->
-            </div>
-        </section>
-        </div>
+        <div></div>
 
     </footer>
 
-    </div>
+
+
 
 </body>
 
