feat: finito il footer

--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
 
 
     <footer>
+
         <div class="container-pagina finale">
+
             <section class="ultima-sezione">
                 <div class="content-footer">
                     <a class="color-blue">Il tuo posto per parlare</a>
@@ -170,30 +172,67 @@
                     <img class="bandiera" src="./img/ita.png" alt="bandiera italiana">
                     <button class="liste-footer italia">Italiano˅</button>
                 </div>
+                <div>
+
+                </div>
             </section>
 
+            <nav>
+                <div>
+                    <ol class="ol">
+                        <li class="color-blue"><a></a>Scarica</li>
+                        <li class="liste-footer"><a></a>Perché Discord</li>
+                        <li class="liste-footer"><a></a>Nitro</li>
+                        <li class="liste-footer"><a></a>Sicurezza</li>
+                        <li class="liste-footer"><a></a>Assistenza</li>
+                    </ol>
+                </div>
 
+                <div>
+                    <ol class="ol">
+                        <li class="color-blue"><a></a>Scarica</li>
+                        <li class="liste-footer"><a></a>Perché Discord</li>
+                        <li class="liste-footer"><a></a>Nitro</li>
+                        <li class="liste-footer"><a></a>Sicurezza</li>
+                        <li class="liste-footer"><a></a>Assistenza</li>
+                    </ol>
+                </div>
 
+                <div>
+                    <ol class="ol">
+                        <li class="color-blue"><a></a>Scarica</li>
+                        <li class="liste-footer"><a></a>Perché Discord</li>
+                        <li class="liste-footer"><a></a>Nitro</li>
+                        <li class="liste-footer"><a></a>Sicurezza</li>
+                        <li class="liste-footer"><a></a>Assistenza</li>
+                        <li class="liste-footer"><a></a>Assistenza</li>
+                        <li class="liste-footer"><a></a>Assistenza</li>
+                        <li class="liste-footer"><a></a>Assistenza</li>
+                        <li class="liste-footer"><a></a>Assistenza</li>
+                        <li class="liste-footer"><a></a>Assistenza</li>
+                    </ol>
 
-            <div class="container-lista">
-                <ol>
-                    <li class="li-bassa"><a></a>Scarica</li>
-                    <li class="li-bassa"><a></a>Perché Discord</li>
-                    <li class="li-bassa"><a></a>Nitro</li>
-                    <li class="li-bassa"><a></a>Sicurezza</li>
-                    <li class="li-bassa"><a></a>Assistenza</li>
-                </ol>
+                </div>
 
-            </div>
-
-
-
+                <div>
+                    <ol class="ol">
+                        <li class="color-blue"><a></a>Scarica</li>
+                        <li class="liste-footer"><a></a>Perché Discord</li>
+                        <li class="liste-footer"><a></a>Nitro</li>
+                        <li class="liste-footer"><a></a>Sicurezza</li>
+                        <li class="liste-footer"><a></a>Assistenza</li>
+                    </ol>
+                </div>
             </nav>
 
         </div>
-        <hr>
 
-        <div></div>
+        
+        <hr>
+        <div class="container-finale">
+            <img src="./img/logo.svg" alt="logo discord">
+            <a class="registarti">Registari</a>
+        </div>
 
     </footer>
 
